Tue Mar  8 23:49:45 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (proc_setgroups): cleanup.

Tue Mar  8 23:40:30 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/misc/test_ruby_mode.rb: test for ruby-mode.el.

Tue Mar  8 23:27:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (get_sc_ngroups_max): try to use NGROUPS_MAX at first if
	  _SC_NGROUP_MAX is not defined.

Tue Mar  8 23:10:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-parse-partial): fix for array in block.

Tue Mar  8 21:44:49 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_rand.c: parenthesize macro arguments.

Tue Mar  8 16:45:31 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (ruby_setenv): MSDN says that Windows XP or earlier limits
	  the total size of environment block to 5,120 chars.  and on such
	  OS, putenv() causes SEGV.  So, ruby should limit the size of an
	  environment variable to 5,120 bytes for workaround.

Tue Mar  8 15:57:20 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rubygems/test_gem_spec_fetcher.rb
	  (TestGemSpecFetcher#test_cache_dir_escapes_windows_paths): cache_dir
	  may have driveletter and `:' for base of cache_dir itself, so need
	  to skip it for checking.

Tue Mar  8 12:30:06 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-deep-indent-paren-p, ruby-calculate-indent):
	  do not apply deep-indent inside parens at the beginning of
	  expressions.

Tue Mar  8 09:32:48 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (configure-ext, build-ext), ext/extmk.rb (extmake):
	  support parallel-make under ext.

Tue Mar  8 09:25:23 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_setgroups): use getgrnam() if getgrnam_r() is
	  not available.

	* process.c: RARRAY_LEN() returns long int.

Tue Mar  8 09:07:03 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_REPLACE_TYPE): enclose in quotes for multiple
	  type names.
